added my own resume details edited the layout for cater to more text

--- a/cv.tex
+++ b/cv.tex
@@ -1,132 +1,247 @@
-%!TEX TS-program = xelatex
-\documentclass[]{friggeri-cv}
-\addbibresource{bibliography.bib}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Friggeri Resume/CV
+% XeLaTeX Template
+% Version 1.0 (5/5/13)
+%
+% This template has been downloaded from:
+% http://www.LaTeXTemplates.com
+%
+% Original author:
+% Adrien Friggeri (adrien@friggeri.net)
+% https://github.com/afriggeri/CV
+%
+% License:
+% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
+%
+% Important notes:
+% This template needs to be compiled with XeLaTeX and the bibliography, if used,
+% needs to be compiled with biber rather than bibtex.
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\documentclass{friggeri-cv} % Add 'print' as an option into the square bracket to remove colors from this template for printing
+
+\addbibresource{bibliography.bib} % Specify the bibliography file to include publications
+
 
 \begin{document}
-\header{adrien}{friggeri}
-       {social network analyst}
+\header{Chong }{Yun Long}{} % Your name and current job title/field
 
+%----------------------------------------------------------------------------------------
+%	SIDEBAR SECTION
+%----------------------------------------------------------------------------------------
 
-% In the aside, each new line forces a line break
-\begin{aside}
-  \section{about}
-    31 rue Smith
-    69002 Lyon
-    France
-    ~
-    \href{mailto:adrien@friggeri.net}{adrien@friggeri.net}
-    \href{http://friggeri.net}{http://friggeri.net}
-    \href{http://facebook.com/adrien}{fb://adrien}
-  \section{languages}
-    bilingual french/english
-    spanish \& italian notions
-  \section{programming}
-    {\color{red} $\varheartsuit$} JavaScript
-    (ES5, node.js)
-    Python, C, OCaml
-    CSS3 \& HTML5
+\begin{aside} % In the aside, each new line forces a line break
+\section{contact}
++65 9852 0910
+~
+\section{www}
+\href{mailto:chong.yunlong@gmail.com}{chong.yunlong@gmail.com}
+\href{https://secure.flickr.com/photos/clouddra/}{flickr.com/clouddra}
+\href{https://github.com/clouddra}{github.com/clouddra}
+~
+\section{languages}
+english -- fluent
+chinese[mandarin] -- fluent
+japanese -- conversant
+~
+\section{programming}
+{\color{red} $\varheartsuit$} \LaTeX{}
+JavaScript, CSS, HTML
+Objective-C, C++, C 
+Java, C\#
+PHP, SQL
+PROMELA 
+LabVIEW, Qlikview
+~
+\section{frameworks}
+Android, iOS
+JQuery, Bootstrap
+MPI, .NET, Charm-Crypto
+~
+\section{hobbies}
+japanese culture/anime
+photography = 
+\{cosplay, portrait, animals\}
 \end{aside}
 
-\section{interests}
-
-complex networks, social networks, community detection, community structure,
-overlapping communities, information diffusion, viral marketing, social
-inference, recommendation, data mining
+%----------------------------------------------------------------------------------------
+%	EDUCATION SECTION
+%----------------------------------------------------------------------------------------
 
 \section{education}
+%\begin{entrylist}
+%------------------------------------------------
+\entry
+{\href{http://www.nus.edu.sg/}{National University of Singapore}}
+{Aug 2010 -- June 2014}
+{\emph{1st Class Honours in Bachelor of Computing, Computer Science}
+\begin{itemize}
+\item Dissertation (Applied Cryptography) -- \href{https://www.dropbox.com/s/litwm8etd4ot6m7/FYP\%20-\%20Efficient\%20Key\%20Aggregation\%20for\%20Cloud\%20Storage.pdf}{Efficient Key Aggregation for Cloud Storage}
+\item Specialization in Information Security, focus area in Parallel Computing
+\item Awarded Dean's List for 3 semesters
+\end{itemize}
+%\begin{itemize}
+%\item 
+%%\item Specializing in Systems Security, Computer Networks, Parallel Computing
+%\end{itemize} 
+}
+%------------------------------------------------
+%\end{entrylist}
 
-\begin{entrylist}
-  \entry
-    {since 2009}
-    {Ph.D. {\normalfont candidate in Computer Science}}
-    {DNET/INRIA, LIP/ÉNS de Lyon}
-    {\emph{A Quantified Theory of Social Cohesion.}}
-  \entry
-    {2007–2008}
-    {M.Sc. magna cum laude}
-    {IXXI, École Normale Supérieure de Lyon}
-    {Majoring in Computer Science\\
-    Specialization in Complex Systems}
-  \entry
-    {2006–2007}
-    {B.Sc. magna cum laude}
-    {École Normale Supérieure de Lyon}
-    {Majoring in Computer Science}
-  \entry
-    {2003–2006}
-    {Classes Préparatoires aux Grandes Écoles}
-    {Lycée Fénelon, Lycée Louis le Grand, Paris}
-    {Preparation for national competitive entrance exams to leading French ``grandes écoles'', specializing in mathematics and physics.}
-  \entry
-    {2003}
-    {French Baccalauréat S. with honors}
-    {Lycée Louis le Grand, Paris}
-    {Specialization in mathematics and physics}
-\end{entrylist}
+%----------------------------------------------------------------------------------------
+%	Projects SECTION
+%----------------------------------------------------------------------------------------
+\vspace{-2.2\parsep}
+\section{projects}
+\entrynormal{
+\begin{itemize}
+\item \emph{WEP Cracker} -- cryptanalysis attack on \href{https://en.wikipedia.org/wiki/RC4}{RC4 cipher} used in WEP
+\item \emph{QEP} (C\#) -- events planner featuring a customized budget optimizing algorithm
+\item \emph{TeachMe!} (CodeIgniter, JQuery) -- social networking site which aims to bring together people with common interests
+\item \emph{SPA} (C++) -- static source code analyzer and parser
+\end{itemize}
+}
 
+%----------------------------------------------------------------------------------------
+%	WORK EXPERIENCE SECTION
+%----------------------------------------------------------------------------------------
+\vspace{-2.2\parsep}
 \section{experience}
 
-\begin{entrylist}
-  \entry
-    {02–07 2009}
-    {LIP6/CNRS, Paris}
-    {Research Internship.}
-    {\emph{Visualization of complex networks.}}
-  \entry
-    {06–08 2008}
-    {ISCPIF/CNRS, Paris}
-    {Research Internship.}
-    {\emph{Diffusion in the Blogosphere. Happy Flu.}}
-  \entry
-    {06–08 2007}
-    {LIP6/CNRS, Paris}
-    {Research Internship.}
-    {\emph{Kernels in real world networks.}}
-  \entry
-    {07–08 2005}
-    {\href{http://www.kelkoo.com}{Kelkoo.com}}
-    {Summer job.}
-    {\emph{Creation of a keyword generator for Google Adwords.}}
-  \entry
-    {07–08 2004}
-    {\href{http://www.monsieurprix.com}{MonsieurPrix.com}}
-    {Summer job.}
-    {\emph{Development of an e-commerce product indexation spider.}}
-\end{entrylist}
+\entry
+{\href{https://www.dso.org.sg/}{DSO National Laboratories}}
+{July 2014 -- Now}
+{\emph{Member of Technical Staff, Computer Security Lab}
+\begin{itemize}
+\item Analyzed protection mechanisms of Microsoft Windows kernel
+\item Researched novel reverse engineering techniques using emulators and virtualization technologies
+\item If I told you more I would have to kill you \dots
+\end{itemize}}
+%\begin{entrylist}
+%------------------------------------------------
+\entry
+{\href{http://www.shoppink.me/}{TADA Pte Ltd}}
+{May 2013 -- Aug 2013}
+{\emph{Mobile Development Intern}
+\begin{itemize}
+\item Independently picked up iOS and Android development concepts within a period of 3 months
+\item Developed \href{http://www.shoppink.me/}{\emph{Shoppink}} (Android, 2 months) -- mobile e-commerce platform for blogshops. Shoppink uses a specialized algorithm to tracks products from over 200 blogshops
+\item Developed \href{http://www.shoppink.me/tomyself}{\emph{ToMyself}} (iOS, 1 month) -- mailer app designed for users who frequently send emails to themselves. \emph{ToMyself} is available on App Store
+\item Gained insights into entrepreneurship 
+\end{itemize}}
+%------------------------------------------------
+\entry
+{\href{http://www.rgei.com/}{RGE Pte Ltd}}
+{May 2011 -- July 2011}
+{\emph{Summer Intern}
+\begin{itemize}
+\item Collaborated extensively with overseas team members for the development and testing of corporate dashboard, which presents raw data in a visually meaningful way, assisting the top management in their decision making process 
+\item Assisted in the deployment of IT infrastructure for more than 100 staff in a newly renovated office
+\item Provided IT support for more than 300 end users, expediting the resolution of any technical problems faced so as to minimize disruption to their business
+\item Supported server and blackberry administration
+\end{itemize}}
+%------------------------------------------------
+\entry
+{\href{http://www.ncs.com.sg/}{NCS Pte Ltd}}
+{Nov 2009 -- May 2010}
+{\emph{Temporary Staff}
+\begin {itemize}
+\item Collaborated with a team of consultants of different nationalities for a multi-million dollar government project
+\item Assisted analysts in the design and coding of the mockups, giving clients a visual experience, allowing them to give better feedback on the system which improves the whole requirements gathering process
+\item Developed a prototype as an illustrative reference for offshore development teams who may have difficulties understanding the specifications due to language barriers
+\item Received commendation letter from Project Manager
+\end{itemize}
+}
+\entry
+{\href{http://www.mindef.gov.sg/imindef/home.html}{National Service. MINDEF Medical Centre (MMC)}}
+{Jan 2008 -- Nov 2009}
+{\emph{Combat Medic, Registration/Appointment IC}
+\begin {itemize}
+\item Managed and supervised the registration and administration section of MMC
+\item Revamped registration and administration workflow, which help improved customer experience and alleviating unnecessary waiting
+\item Spearheaded the design of a standardized emergency drug manual and was awarded silver in WITs competition
+\item Received commendation from various officers throughout my stint in MMC
+\end{itemize}
+}
+\entry
+{\href{http://www.simtech.a-star.edu.sg/}{A*STAR (SIMTech)}}
+{Nov 2006 -- Dec 2006}
+{\emph{Research Intern}
+\begin {itemize}
+\item Worked in a team of research scientists for an A*STAR-Rolls Royce collaboration project.
+\item Calibrated and programmed an industrial gantry robot used for fuel cell assembly
+\item Contributed ideas to the design of the gantry robot
+\end{itemize}
+}
+%%----------------------------------------------------------------------------------------
+%%	COMMUNICATION SKILLS SECTION
+%%----------------------------------------------------------------------------------------
+\vspace{-2.2\parsep}
+\section{co-curricular}
+\entry
+{\href{http://www.sg.emb-japan.go.jp/culture_kizuna.htm}{Kizuna Project}}
+{Jul 2012}
+{\emph{Cultural exchange program to Japan}
+\begin{itemize}
+\item Gained awareness of Japan's post-earthquake revival efforts as well as the economic and social impact the earthquake had on Fukushima 
+\item Created a \href{http://courseware.nus.edu.sg/e-raion/document/KIZUNA/ChongYunLongPhotobook.pdf}{photobook} and a \href{http://courseware.nus.edu.sg/e-raion/document/KIZUNA/ChongYunLongReport.pdf}{report} to share my experiences on the trip and to educate the public about the post-earthquake situation in Fukushima 
+\end{itemize}
 
-\section{applications}
+}
+%\vfill
+%\flushright
+%resume adapted from \\
+%\href{Friggeri Resume/CV}{https://github.com/afriggeri/CV}
 
-\begin{entrylist}
-  \entry
-    {2012}
-    {Who did I forget ?}
-    {\href{http://whodidiforget.com}{whodidiforget.com}}
-    {Guest list recommendation for Facebook events based on friends already attending the event.}
-  \entry
-    {2011}
-    {Fellows}
-    {\href{http://fellows-exp.com}{fellows-exp.com}}
-    {Automatic community detection among Facebook Friends in order to validate the \emph{cohesion} measure, creation of friend lists.}
-  \entry
-    {2008}
-    {Happy Flu}
-    {\href{http://happyflu.com}{happyflu.com}}
-    {Experiment aimed to measure viral spreading of content across the blogosphere.}
-\end{entrylist}
-
-\section{publications}
-
-
-\printbibsection{article}{article in peer-reviewed journal}
-\begin{refsection}
-  \nocite{*}
-  \printbibliography[sorting=chronological, type=inproceedings, title={international peer-reviewed conferences/proceedings}, notkeyword={france}, heading=subbibliography]
-\end{refsection}
-\begin{refsection}
-  \nocite{*}
-  \printbibliography[sorting=chronological, type=inproceedings, title={local peer-reviewed conferences/proceedings}, keyword={france}, heading=subbibliography]
-\end{refsection}
-\printbibsection{misc}{other publications}
-\printbibsection{report}{research reports}
+%\begin{entrylist}
+%%------------------------------------------------
+%\entry
+%{2011}
+%{Oral Presentation}
+%{California Business Conference}
+%{Presented the research I conducted for my Masters of Commerce degree.}
+%%------------------------------------------------
+%\entry
+%{2010}
+%{Poster}
+%{Annual Business Conference, Oregon}
+%{As part of the course work for BUS320, I created a poster analyzing several local businesses and presented this at a conference.}
+%%------------------------------------------------
+%\end{entrylist}
+%
+%%----------------------------------------------------------------------------------------
+%%	INTERESTS SECTION
+%%----------------------------------------------------------------------------------------
+%
+%\section{interests}
+%
+%\textbf{professional:} data analysis, company profiling, risk analysis, economics, web design, web app creation, software design, marketing \textbf{personal:} piano, chess, cooking, dancing, running
+%
+%----------------------------------------------------------------------------------------
+%	PUBLICATIONS SECTION
+%----------------------------------------------------------------------------------------
+%
+%\section{publications}
+%
+%\printbibsection{article}{article in peer-reviewed journal} % Print all articles from the bibliography
+%
+%\printbibsection{book}{books} % Print all books from the bibliography
+%
+%\begin{refsection} % This is a custom heading for those references marked as "inproceedings" but not containing "keyword=france"
+%\nocite{*}
+%\printbibliography[sorting=chronological, type=inproceedings, title={international peer-reviewed conferences/proceedings}, notkeyword={france}, heading=subbibliography]
+%\end{refsection}
+%
+%\begin{refsection} % This is a custom heading for those references marked as "inproceedings" and containing "keyword=france"
+%\nocite{*}
+%\printbibliography[sorting=chronological, type=inproceedings, title={local peer-reviewed conferences/proceedings}, keyword={france}, heading=subbibliography]
+%\end{refsection}
+%
+%\printbibsection{misc}{other publications} % Print all miscellaneous entries from the bibliography
+%
+%\printbibsection{report}{research reports} % Print all research reports from the bibliography
+%
+%----------------------------------------------------------------------------------------
 
 \end{document}
