--- a/cv.tex
+++ b/cv.tex
@@ -36,9 +36,9 @@
 \href{mailto:chong.yunlong@gmail.com}{chong.yunlong@gmail.com}
 ~
 \section{www}
-{\color{dark-blue} \href{https://secure.flickr.com/photos/clouddra/}{flickr.com}
-\href{https://github.com/clouddra}{github.com}
-\href{https://sg.linkedin.com/in/chongyl}{linkedIn.com}}
+\href{https://secure.flickr.com/photos/clouddra/}{flickr.com/clouddra}
+\href{https://github.com/clouddra}{github.com/clouddra}
+\href{https://sg.linkedin.com/in/chongyl}{linkedin.com/in/chongyl}
 ~
 \section{languages}
 english -- fluent
