corrected ida work duration

--- a/cv.tex
+++ b/cv.tex
@@ -116,7 +116,7 @@ IDA disassembler, QEMU
 
 \entry
 {\href{https://www.ida.gov.sg/}{Infocomm Development Authority of Singapore (IDA)}}
-{July 2014 -- Jan 2015}
+{Jan 2015 -- Now}
 {\emph{Product Engineer, Government Digital Services}
 \begin{itemize}[topsep=2.5pt, parsep=1.5pt]
 \item Ruby on Rails/React.js developer for Business Grant Portal (BGP) involving various government agencies
