updated resume with kanban course

--- a/cv.tex
+++ b/cv.tex
@@ -55,7 +55,7 @@ Objective-C, PHP
 ~
 \section{frameworks/libraries}
 React.js, Ruby on Rails
-Flux, Alt, Immutable.js
+Redux, Alt, Immutable.js
 RSpec, Capybara
 Android SDK, iOS SDK
 diStorm disassembler
@@ -123,7 +123,7 @@ IDA disassembler, QEMU
 \item Re-engineered the entire BGP frontend/backend into a single-page application to provide a slicker user experience and interface
 \item Established a unified architecture for BGP to reduce application complexity, improve code reusability, reliability and performance
 \item Mentored and coached the team, new hires and vendors on the latest open source technologies.
-\item Employed modern software development methodologies and techniques (scrum, test-driven development, pair programming, secure programming) to deliver quality products with high business value
+\item Employed modern software development methodologies and techniques (scrum, test-driven development, pair programming) to deliver quality products with high business value
 \item Educating the team on good security practices to minimize security vulnerabilities during application development 
 \end{itemize}}
 \entry
@@ -176,6 +176,10 @@ IDA disassembler, QEMU
 \vspace{-2.2\parsep}
 \section{certifications}
 \entry
+{Kanban Management Professional - I}
+{Since Jun 2016}
+{\href{https://www.iss.nus.edu.sg/ProfessionalCourses/SearchCourse/CourseDetail/tabid/267/cid/399/cname/lean-kanban-foundation/Default.aspx}{\emph{Lean Kanban University}}}
+\entry
 {Organizational Systems Web Application Pentester}
 {Since Apr 2015}
 {\href{http://securitystartshere.org/page-training-oswap.htm}{\emph{ThinkSECURE Pte Ltd}}}
@@ -183,10 +187,6 @@ IDA disassembler, QEMU
 {Certified ScrumMaster®}
 {Apr 2015 -- Apr 2017}
 {\href{https://www.scrumalliance.org/certifications/practitioners/certified-scrummaster-csm}{\emph{Scrum Alliance}}}
-\entry
-{Appian Application Designer}
-{Since Jun 2015}
-{\href{http://www.appian.com/services/training-services/application-designer-201/}{\emph{Appian Corporation}}}
 
 %%----------------------------------------------------------------------------------------
 %%	CO-CURRICULAR SKILLS SECTION
