added publications section

--- a/cv.tex
+++ b/cv.tex
@@ -99,12 +99,20 @@ IDA disassembler, QEMU
 \entrynormal{
 \begin{description}[style=unboxed,leftmargin=0cm, parsep=1.5pt]
 \item[WEP Cracker] Cryptanalysis attack on \href{https://en.wikipedia.org/wiki/RC4}{RC4 cipher} used in WEP
-\item[QEP] Events planner featuring a customized budget optimizing algorithm
 \item[\href{https://github.com/sockmister/teach}{TeachMe!}] Social networking site which aims to bring together people with common interests
 \item[\href{https://github.com/clouddra/SPA}{SPA}] Static source code analyzer and parser
 \item[{\href{https://github.com/clouddra/Ethogram}{Ethogram}}] Android app which simplifies the process of cataloging and recording animal behavior
 \item[\href{https://github.com/clouddra/News-Butler}{News Butler}] Proof-of-concept Android news app which learns the preferences of user using data mining techniques
 \item[{\href{https://github.com/yzdong/impulsive-philanthropist-addon}{impulsive-philanthropist}}] Google Chrome extension that encourages people to make donations when making online purchases
+\end{description}
+}
+
+\vspace{-2.2\parsep}
+\section{publications}
+\entrynormal{
+\begin{description}[style=unboxed,leftmargin=0cm, parsep=1.5pt]
+\item[\href{https://github.com/dkhungme/FastKAC}{Practical and Scalable Sharing of Encrypted Data in Cloud Storage with Key Aggregation}] \href{http://ihmmsec.org/}{IH\&MMSec 2016}
+\item[\href{https://goo.gl/aFVeyy}{React Rails for Business Grants Portal}] Medium
 \end{description}
 }
 
