updated stuff on grafana, frontend

--- a/cv.tex
+++ b/cv.tex
@@ -48,9 +48,9 @@ japanese -- conversant
 \section{programming}
 Ruby, Python
 JavaScript (ES6)
-x86-64, C++, C 
-Java, C\#
-Objective-C, PHP 
+Java, x86-64, 
+C++, C,
+Erlang
 \LaTeX{}
 ~
 \section{frameworks/libraries}
@@ -125,14 +125,16 @@ IDA disassembler, QEMU
 \entry
 {\href{https://www.ida.gov.sg/}{Infocomm Development Authority of Singapore (IDA)}}
 {Jan 2015 -- Now}
-{\emph{Product Engineer, Government Digital Services}
+{\emph{Product Engineer, Government Digital Services (GDS)}
 \begin{itemize}[topsep=2.5pt, parsep=1.5pt]
 \item Ruby on Rails/React.js developer for Business Grant Portal (BGP) involving various government agencies
 \item Re-engineered the entire BGP frontend/backend into a single-page application to provide a slicker user experience and interface
 \item Established a unified architecture for BGP to reduce application complexity, improve code reusability, reliability and performance
+\item Set up dashboards (\href{http://grafana.org/}{Grafana}, \href{https://prometheus.io/}{Prometheus}) to visualize key business metrics and to monitor system performance
+\item Built GDS's \href{http://gds-gov.tech/}{landing page} using \href{https://github.com/gatsbyjs/gatsby}{Gatsby.js}
 \item Mentored and coached the team, new hires and vendors on the latest open source technologies.
 \item Employed modern software development methodologies and techniques (scrum, test-driven development, pair programming) to deliver quality products with high business value
-\item Educating the team on good security practices to minimize security vulnerabilities during application development 
+ 
 \end{itemize}}
 \entry
 {\href{https://www.dso.org.sg/}{DSO National Laboratories}}
